--- a/css/style.css
+++ b/css/style.css
@@ -599,6 +599,7 @@ summary {
 	border: 0.25rem solid var(--swiper-preloader-color, var(--swiper-theme-color));
 	border-radius: 50%;
 	border-top-color: transparent;
+	display: none;
 }
 
 .swiper:not(.swiper-watch-progress) .swiper-lazy-preloader,
@@ -2061,7 +2062,7 @@ input {
 
 input::placeholder {
 	color: #7b7b7b;
-	font-size: 0.75rem;
+	font-size: 0.875rem;
 }
 
 input:focus-visible {
@@ -2269,7 +2270,7 @@ input:focus-visible {
 	color: inherit;
 	font-family: "Roboto", sans-serif;
 	font-weight: 400;
-	font-size: 0.875rem;
+	font-size: 1rem;
 	line-height: 150%;
 	margin: 1.4375rem 0 0;
 }
@@ -2392,7 +2393,7 @@ input:focus-visible {
 }
 .header__logo img {
 	display: block;
-	width: 10.8125rem;
+	width: 13.6875rem;
 }
 .header__logo:focus-visible {
 	outline: 0.0625rem solid #fff;
@@ -2505,7 +2506,7 @@ input:focus-visible {
 	margin: 0;
 }
 .header__nav a {
-	font-size: 0.875rem;
+	font-size: 0.975rem;
 	line-height: 1.2;
 	color: inherit;
 	text-decoration: none;
@@ -2582,10 +2583,10 @@ input:focus-visible {
 	min-width: 0;
 }
 .top__wrapper {
-	background-image: url("../img/top-decor-big.jpg");
+	background-image: url("../img/top-decor-big.png");
 	background-repeat: no-repeat;
 	background-position: bottom right -0.625rem;
-	background-size: 100% auto;
+	background-size: 74.5625rem auto;
 	padding-top: 4.1875rem;
 	padding-bottom: 1.25rem;
 	position: relative;
@@ -2850,6 +2851,7 @@ input:focus-visible {
 }
 .about__col > p {
 	text-align: justify;
+	font-size: 1.125rem;
 }
 .about__col img {
 	max-width: 100%;
@@ -2911,6 +2913,11 @@ input:focus-visible {
 .preview-products {
 	padding-top: 3.125rem;
 	padding-bottom: 6.625rem;
+}
+.preview-products__body {
+	display: flex;
+    gap: 1.875rem;
+    justify-content: space-between;
 }
 .preview-products__title {
 	margin: 0rem 0rem 5.9375rem 0rem;
@@ -3249,7 +3256,7 @@ input:focus-visible {
 	outline: 0.125rem solid #fff;
 }
 .footer__logo img {
-	width: 10.8125rem;
+	width: 13.6875rem;
 }
 .footer__menu {
 	display: flex;
@@ -3260,7 +3267,7 @@ input:focus-visible {
 }
 .footer__menu a {
 	color: #fff;
-	font-size: 0.875rem;
+	font-size: 0.975rem;
 	line-height: 1.2;
 	text-decoration: none;
 }
@@ -3281,6 +3288,7 @@ input:focus-visible {
 	display: flex;
 	flex-direction: column;
 	align-items: start;
+	font-size: 1.125rem;
 }
 .footer__address-text {
 	margin: 0 0 0.625rem;
@@ -3325,6 +3333,7 @@ input:focus-visible {
 	list-style: none;
 	display: flex;
 	gap: 2rem;
+	font-size: 1.125rem;
 }
 .footer__bottom-list a {
 	color: #fff;
@@ -3951,6 +3960,7 @@ input:focus-visible {
 }
 .product-page__table {
 	display: block;
+	font-size: 1.125rem;
 }
 .product-page__table-body {
 	display: block;
@@ -3970,6 +3980,7 @@ input:focus-visible {
 	border-radius: 1.5625rem;
 	display: flex;
 	align-items: center;
+	font-size: 1.125rem;
 }
 .product-page__specifications-country::after {
 	content: "";
@@ -4001,7 +4012,7 @@ input:focus-visible {
 	text-decoration: underline;
 	padding: 0.375rem 0.625rem;
 	text-underline-offset: 0.1875rem;
-	font-size: 0.875rem;
+	font-size: 1.125rem;
 }
 .product-page__delivery:hover,
 .product-page__delivery:focus-visible {
@@ -4017,7 +4028,9 @@ input:focus-visible {
 .product-page__brands {
 	margin: 0rem 0rem 4.375rem;
 }
-
+.product-page__descr p {
+	font-size: 1.125rem;
+}
 .button__more {
 	display: none;
 	margin: 1.25rem 0;
@@ -4084,6 +4097,7 @@ input:focus-visible {
 }
 .product-form__descr {
 	margin: 0.9375rem 0 1.6875rem;
+	font-size: 1.125rem;
 }
 .product-form__row {
 	max-width: 25rem;
@@ -4118,7 +4132,7 @@ input:focus-visible {
 	display: block;
 	margin-top: 1.125rem;
 	max-width: 32.5rem;
-	font-size: 0.875rem;
+	font-size: 1rem;
 	line-height: 1.5;
 	text-shadow: 0 0.25rem 0.25rem 0 rgba(0, 0, 0, 0.25);
 	color: rgba(255, 255, 255, 0.5);
@@ -4193,6 +4207,7 @@ input:focus-visible {
 }
 
 .product-lizing {
+	padding-top: 1.875rem;
 	padding-bottom: 4.6875rem;
 }
 .product-lizing__top {
@@ -4558,7 +4573,7 @@ input:focus-visible {
 }
 
 .lizing-page .product-lizing__top {
-	justify-content: end;
+	justify-content: space-between;
 }
 .lizing-page .product-lizing__nav {
 	margin-top: 1.25rem;
@@ -4683,7 +4698,6 @@ input:focus-visible {
 	font-family: "Inter", sans-serif;
 	font-weight: 400;
 	font-size: 1.5rem;
-	text-transform: capitalize;
 	text-decoration: underline;
 	text-decoration-skip-ink: none;
 	color: #fff;
@@ -5211,6 +5225,9 @@ input:focus-visible {
 	}
 	.swiper {
 		overflow: visible;
+	}
+	.product-page__trambail .swiper {
+		overflow: hidden;
 	}
 	.product__slider .swiper-wrapper {
 		flex-direction: row;
